// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <SubmitFabField> inside a Form 1`] = `
<DocumentFragment>
  <form
    id="submitFabFieldForm.form"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root-1"
      >
        <button
          class="MuiButtonBase-root MuiFab-root"
          id="submitFabFieldForm.form.abc"
          name="submitFabFieldForm.form.abc"
          tabindex="0"
          type="submit"
        >
          <span
            class="MuiFab-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M5 4v2h14V4H5zm0 10h4v6h6v-6h4l-7-7-7 7z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`should render <SubmitFabField> inside a FormView 1`] = `
<DocumentFragment>
  <form
    id="submitFabFieldFormView.form"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation3 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root-2"
      >
        <div
          class="MuiBox-root MuiBox-root-3"
        >
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root-4"
              >
                <button
                  class="MuiButtonBase-root MuiFab-root"
                  id="submitFabFieldFormView.form.abc"
                  name="submitFabFieldFormView.form.abc"
                  tabindex="0"
                  type="submit"
                >
                  <span
                    class="MuiFab-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M5 4v2h14V4H5zm0 10h4v6h6v-6h4l-7-7-7 7z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
